restyle and bag functional

--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,9 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(0, 0, 0, 0.87);
   /* background-color: #fffdd0; */
-  background-color: #16151A;
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
